# cov3d

./: .buildinfo  .coveragerc  .gitignore  README.rst  api.html  bibliography.html  cli.html  credits.html  cross-validation-2022.csv  cross-validation-plot.py  cross-validation.csv  cross-validation.py  ensemble-test.py  ensemble-validation.py  ensemble.py  ensemble.sh  genindex.html  index.html  infer-test-data.py  macrof1.py  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  resolution-csv.py  resolution.py  search.html  searchindex.js  stats.py  stoic-cross-validation.csv  test.sh
.doctrees/: api.doctree  bibliography.doctree  cli.doctree  credits.doctree  environment.pickle  index.doctree  quickstart.doctree
.github/workflows/: docs.yml
_sources/: cli.rst.txt  index.rst.txt
cov3d/: __init__.py  apps.py  callbacks.py  loss.py  lung_split.py  metrics.py  models.py  transforms.py  visualization.py
coverage/: cov3d___init___py.html  cov3d_apps_py.html  cov3d_callbacks_py.html  cov3d_loss_py.html  cov3d_metrics_py.html  cov3d_models_py.html  cov3d_transforms_py.html  cov3d_visualization_py.html  index.html  status.json
docs/: api.rst  bibliography.rst  conf.py  credits.rst  references.bib
tests/: _test_loss.py  test_apps.py  test_covideo.py  test_loss.py  test_severity.py
tests/expected/TestCov3d/test_cli/: show-batch_help.yaml  train_help.yaml  tune_help.yaml
tests/expected/TestCov3d/test_dataloaders/: dataloaders_testdata.yaml
tests/expected/TestCov3d/test_metrics/: metrics_default.yaml
tests/expected/TestCov3d/test_model/: model_default.yaml
tests/expected/TestCov3d/test_monitor/: monitor_default.yaml
tests/expected/TestCov3d/test_one_batch_loss/: one_batch_loss_default.yaml
tests/expected/TestCov3d/test_one_batch_output_size/: one_batch_output_size_default.yaml
tests/expected/TestCov3dSeverity/: severity-training.csv  severity-validation.csv
tests/expected/TestCov3dSeverity/test_cli/: show-batch_help.yaml  train_help.yaml  tune_help.yaml
tests/expected/TestCov3dSeverity/test_metrics/: metrics_default.yaml
tests/expected/TestCov3dSeverity/test_model/: model_default.yaml
tests/expected/TestCov3dSeverity/test_monitor/: monitor_default.yaml
tests/expected/TestCov3dSeverity/test_one_batch_loss/: one_batch_loss_default.yaml
tests/expected/TestCov3dSeverity/test_one_batch_output_size/: one_batch_output_size_default.yaml
tests/expected/TestCovideo/test_cli/: show-batch_help.yaml  train_help.yaml  tune_help.yaml
tests/testdata/: validation.csv
(+5 files in other folders)
