[tool.poetry]
name = "cov3d"
version = "0.1.1"
description = "A deep learning model to detect the presence and severity of COVID19 in patients from CT-scans."
authors = ["Robert Turnbull <robert.turnbull@unimelb.edu.au>"]
license = "Apache-2.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
torchapp = {git = "https://github.com/rbturnbull/torchapp.git", branch = "master"}
cmake = "^3.22.4"
plotly = "^5.8.2"
kaleido = "0.2.1"
tricubic = "^1.0.2"
pytorchvideo = "^0.1.5"
scikit-image = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipykernel = "^6.6.1"
coverage = "^5.5"
autopep8 = "^1.5.7"
Sphinx = "^4.2.0"
nbsphinx = "^0.8.7"
sphinx-rtd-theme = "^1.0.0"
sphinx-autobuild = "^2021.3.14"
myst-parser = "^0.15.2"
pre-commit = "^2.15.0"
sphinx-copybutton = "^0.4.0"
black = "^21.10b0"
sphinx-click = {git = "https://github.com/rbturnbull/sphinx-click.git"}
sphinxcontrib-bibtex = "^2.4.2"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cov3d = "cov3d.apps:Cov3d.main"
cov3dseverity = "cov3d.apps:Cov3dSeverity.main"
